--- a/eTools Ultimate/Views/Pages/ExchangerPage.xaml
+++ b/eTools Ultimate/Views/Pages/ExchangerPage.xaml
@@ -223,17 +223,21 @@
         <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             
-            <!--  Static Header mit Buttons  -->
-            <StackPanel
-                Grid.Row="0"
-                Margin="0,10,20,10"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Orientation="Horizontal"
-                ZIndex="1">
+            <!--  Add und Delete Buttons oben rechts  -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <StackPanel
+                    Grid.Column="1"
+                    Margin="0,10,20,10"
+                    Orientation="Horizontal">
                     <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
@@ -261,10 +265,17 @@
                         Background="#FD292F"
                         Content="{i18n:StringLocalizer 'Delete'}"
                         Icon="Delete24" />
-            </StackPanel>
+                </StackPanel>
+            </Grid>
+            
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="1"
+                Margin="0,0,0,0"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
             
             <!--  Scrollable Content  -->
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <!--  Formulare  -->
                     <StackPanel Margin="20">
