--- a/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
+++ b/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
@@ -210,6 +210,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
@@ -242,14 +243,26 @@
                     <ui:Button
                         Margin="0,0,10,0"
                         Background="#2F70AF"
-                        Command="{Binding AddGiftboxItemCommand}"
-                        Content="{i18n:StringLocalizer 'Add item'}"
+                        Command="{Binding AddGiftboxCommand}"
+                        Content="{i18n:StringLocalizer 'New Box'}"
                         Icon="Add24" />
+                    <ui:Button
+                        Margin="0,0,10,0"
+                        Appearance="Danger"
+                        Command="{Binding DeleteGiftboxCommand}"
+                        Content="{i18n:StringLocalizer 'Delete Box'}"
+                        Icon="Delete24" />
                 </StackPanel>
             </Grid>
 
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="1"
+                Margin="0,5,0,5"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
+
             <!--  Title and Info  -->
-            <StackPanel Grid.Row="1" Margin="0,0,0,10">
+            <StackPanel Grid.Row="2" Margin="0,0,0,10">
                 <ui:TextBlock
                     Margin="0,0,0,10"
                     FontSize="24"
@@ -290,28 +303,61 @@
 
             <!--  Data Grid  -->
             <ui:Card
-                Grid.Row="2"
+                Grid.Row="3"
                 Margin="0,0,0,0"
                 Padding="10"
                 VerticalAlignment="Top">
-                <DataGrid
-                    VerticalAlignment="Top"
-                    VerticalContentAlignment="Center"
-                    AutoGenerateColumns="False"
-                    Background="Transparent"
-                    BorderThickness="0"
-                    CanUserResizeColumns="True"
-                    CanUserSortColumns="True"
-                    GridLinesVisibility="Horizontal"
-                    HeadersVisibility="Column"
-                    HorizontalGridLinesBrush="{DynamicResource ControlElevationBorderBrush}"
-                    IsReadOnly="True"
-                    ItemsSource="{Binding SelectedItem.Items, ElementName=GiftboxListView}">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    
+                    <!--  DataGrid Header  -->
+                    <Grid Grid.Row="0" Margin="0,0,0,15"/>
+
+                    <DataGrid
+                        Grid.Row="1"
+                        VerticalAlignment="Top"
+                        VerticalContentAlignment="Center"
+                        AutoGenerateColumns="False"
+                        Background="Transparent"
+                        BorderThickness="0"
+                        CanUserResizeColumns="True"
+                        CanUserSortColumns="True"
+                        GridLinesVisibility="Horizontal"
+                        HeadersVisibility="Column"
+                        HorizontalGridLinesBrush="{DynamicResource ControlElevationBorderBrush}"
+                        IsReadOnly="True"
+                        ItemsSource="{Binding SelectedItem.Items, ElementName=GiftboxListView}">
                     <DataGrid.Columns>
                         <DataGridTemplateColumn
                             Width="*"
-                            Header="{i18n:StringLocalizer 'Item'}"
                             SortMemberPath="Item.Name">
+                            <DataGridTemplateColumn.HeaderTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*" />
+                                            <ColumnDefinition Width="Auto" />
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock
+                                            Grid.Column="0"
+                                            Text="{i18n:StringLocalizer 'Item'}"
+                                            VerticalAlignment="Center" />
+                                        <ui:Button
+                                            Grid.Column="1"
+                                            Background="#2F70AF"
+                                            Command="{Binding DataContext.AddGiftboxItemCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                                            Content="{i18n:StringLocalizer 'Add item'}"
+                                            FontSize="10"
+                                            Icon="Add16"
+                                            Padding="8,2"
+                                            MinWidth="65"
+                                            Margin="10,0,0,0" />
+                                    </Grid>
+                                </DataTemplate>
+                            </DataGridTemplateColumn.HeaderTemplate>
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
                                     <Grid Margin="4">
@@ -387,7 +433,8 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                </DataGrid>
+                    </DataGrid>
+                </Grid>
             </ui:Card>
         </Grid>
     </Grid>
