--- a/eTools Ultimate/Views/Pages/ItemsPage.xaml
+++ b/eTools Ultimate/Views/Pages/ItemsPage.xaml
@@ -1689,17 +1689,21 @@
         <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             
-            <!--  Static Header mit Buttons  -->
-            <StackPanel
-                Grid.Row="0"
-                Margin="0,10,30,10"
-                HorizontalAlignment="Right"
-                VerticalAlignment="Top"
-                Orientation="Horizontal"
-                ZIndex="1">
+            <!--  Add und Delete Buttons oben rechts  -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <StackPanel
+                    Grid.Column="1"
+                    Margin="0,10,30,10"
+                    Orientation="Horizontal">
                     <ui:Button ToolTip="Undo">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
                     </ui:Button>
@@ -1945,10 +1949,17 @@
                         Background="#FD292F"
                         Click="DeleteButton_Click"
                         Content="Delete" />
-            </StackPanel>
+                </StackPanel>
+            </Grid>
+            
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="1"
+                Margin="0,0,0,0"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
             
             <!--  Scrollable Content  -->
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <!--  Formulare  -->
                     <StackPanel Margin="20">
