--- a/eTools Ultimate/Views/Pages/SkillPage.xaml
+++ b/eTools Ultimate/Views/Pages/SkillPage.xaml
@@ -546,16 +546,21 @@
         <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
             
-            <!-- Static Header mit Buttons -->
-            <StackPanel Grid.Row="0"
-                      Orientation="Horizontal" 
-                      HorizontalAlignment="Right" 
-                      VerticalAlignment="Top"
-                      Margin="0,10,30,10"
-                      ZIndex="1">
+            <!--  Add und Delete Buttons oben rechts  -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <StackPanel
+                    Grid.Column="1"
+                    Margin="0,10,30,10"
+                    Orientation="Horizontal">
                     <ui:Button
                              ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24"/>
@@ -582,10 +587,17 @@
                              Content="{i18n:StringLocalizer 'Delete'}" 
                              Background="#FD292F"
                              Click="DeleteButton_Click"/>
-            </StackPanel>
+                </StackPanel>
+            </Grid>
+            
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="1"
+                Margin="0,0,0,0"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
             
             <!-- Scrollable Content -->
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
                 <Grid>
                     <!-- Formulare -->
                 <StackPanel Margin="20">
