--- a/eTools Ultimate/Views/Pages/TextsPage.xaml
+++ b/eTools Ultimate/Views/Pages/TextsPage.xaml
@@ -185,25 +185,20 @@
         <Grid Grid.Column="2" Margin="15">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <!--  Header with Add/Delete Buttons  -->
-            <Grid Grid.Row="0" Margin="0,0,0,20">
+            <!--  Add und Delete Buttons oben rechts  -->
+            <Grid Grid.Row="0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock
-                    Grid.Column="0"
-                    FontSize="24"
-                    FontWeight="Bold"
-                    Text="{i18n:StringLocalizer 'Text Editor'}" />
-
                 <StackPanel
                     Grid.Column="1"
-                    Margin="0,0,10,0"
+                    Margin="0,10,0,0"
                     Orientation="Horizontal">
                     <ui:Button Margin="0,0,0,0" ToolTip="{i18n:StringLocalizer 'Undo'}">
                         <ui:SymbolIcon Symbol="ArrowUndo24" />
@@ -235,9 +230,16 @@
                 </StackPanel>
             </Grid>
 
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="1"
+                Margin="0,10,0,10"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
+
+
             <!--  Form Section with General Fields  -->
-            <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto">
-                <StackPanel>
+            <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
+                <StackPanel Margin="10,5,10,20">
                     <!--  General Section  -->
                     <TextBlock Style="{StaticResource SectionHeaderStyle}" Text="{i18n:StringLocalizer 'General'}" />
 
