--- a/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
+++ b/eTools Ultimate/Views/Pages/AccessoriesPage.xaml
@@ -168,51 +168,46 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <!--  Add und Delete Buttons oben rechts  -->
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
+            <StackPanel
+                Grid.Row="0"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
+                    <ui:SymbolIcon Symbol="ArrowUndo24" />
+                </ui:Button>
+                <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
+                    <ui:SymbolIcon Symbol="ArrowRedo24" />
+                </ui:Button>
+                <ui:Button
+                    x:Name="SaveButton"
+                    Margin="0,0,10,0"
+                    Command="{Binding SaveCommand}"
+                    Content="{i18n:StringLocalizer 'Save'}" />
+                <ui:Button
+                    x:Name="ExpertButton"
+                    Margin="0,0,10,0"
+                    Appearance="Secondary"
+                    Content="{i18n:StringLocalizer 'Expert'}" />
 
-                <StackPanel
-                    Grid.Column="1"
-                    Margin="0,10,0,0"
-                    Orientation="Horizontal">
-                        <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
-                            <ui:SymbolIcon Symbol="ArrowUndo24" />
-                        </ui:Button>
-                        <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
-                            <ui:SymbolIcon Symbol="ArrowRedo24" />
-                        </ui:Button>
-                        <ui:Button
-                            x:Name="SaveButton"
-                            Margin="0,0,10,0"
-                            Command="{Binding SaveCommand}"
-                            Content="{i18n:StringLocalizer 'Save'}" />
-                        <ui:Button
-                            x:Name="ExpertButton"
-                            Margin="0,0,10,0"
-                            Appearance="Secondary"
-                            Content="{i18n:StringLocalizer 'Expert'}" />
-
-                        <ui:Button
-                            x:Name="AddButton"
-                            Margin="0,0,10,0"
-                            Appearance="Primary"
-                            Command="{Binding AddCommand}"
-                            Content="{i18n:StringLocalizer 'Add'}" />
-                        <ui:Button
-                            x:Name="DeleteButton"
-                            Appearance="Danger"
-                            Command="{Binding DeleteCommand}"
-                            Content="{i18n:StringLocalizer 'Delete'}"
-                            Foreground="White" />
-                </StackPanel>
-            </Grid>
+                <ui:Button
+                    x:Name="AddButton"
+                    Margin="0,0,10,0"
+                    Appearance="Primary"
+                    Command="{Binding AddCommand}"
+                    Content="{i18n:StringLocalizer 'Add'}" />
+                <ui:Button
+                    x:Name="DeleteButton"
+                    Appearance="Danger"
+                    Command="{Binding DeleteCommand}"
+                    Content="{i18n:StringLocalizer 'Delete'}"
+                    Foreground="White" />
+            </StackPanel>
 
             <!--  Separator  -->
             <Separator
@@ -221,9 +216,8 @@
                 Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
 
             <!--  Title and Info  -->
-            <StackPanel Grid.Row="2" Margin="0,0,0,10">
+            <StackPanel Grid.Row="2">
                 <ui:TextBlock
-                    Margin="0,0,0,10"
                     FontSize="24"
                     FontTypography="Title"
                     Foreground="{DynamicResource TextFillColorPrimaryBrush}">
@@ -232,47 +226,53 @@
                 </ui:TextBlock>
             </StackPanel>
 
+            <!--  Separator  -->
+            <Separator
+                Grid.Row="3"
+                Margin="0,5,0,5"
+                Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
+
             <!--  Accessory Stats - Card View  -->
             <ScrollViewer
                 x:Name="AccessoryScrollViewer"
-                Grid.Row="3"
-                    CanContentScroll="True"
-                    Focusable="True"
-                    IsTabStop="True"
-                    PanningMode="VerticalOnly"
-                    VerticalScrollBarVisibility="Auto">
-                    <Grid Margin="10,5,10,20">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                            <RowDefinition Height="*" />
-                        </Grid.RowDefinitions>
-                        
-                        <!--  Add Level Button  -->
-                        <ui:Button
-                            Grid.Row="0"
-                            Margin="0,0,0,16"
-                            HorizontalAlignment="Left"
-                            Appearance="Secondary"
-                            Command="{Binding DataContext.AddAbilityOptionDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"
-                            Content="{i18n:StringLocalizer 'New Level'}"
-                            Icon="Add24" />
-                        
-                        <!--  Two Column Grid for Ability Data  -->
-                        <ItemsControl Grid.Row="1" ItemsSource="{Binding SelectedItem.AbilityOptionData, Mode=OneWay, ElementName=AccessoriesListView}">
-                            <ItemsControl.ItemsPanel>
-                                <ItemsPanelTemplate>
-                                    <UniformGrid Columns="2" />
-                                </ItemsPanelTemplate>
-                            </ItemsControl.ItemsPanel>
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Border
-                                        Margin="0,0,6,12"
-                                        Padding="16"
-                                        BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
-                                        BorderThickness="1"
-                                        CornerRadius="6"
-                                        Tag="{Binding}">
+                Grid.Row="4"
+                CanContentScroll="True"
+                Focusable="True"
+                IsTabStop="True"
+                PanningMode="VerticalOnly"
+                VerticalScrollBarVisibility="Auto">
+                <Grid Margin="10,5,10,20">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <!--  Add Level Button  -->
+                    <ui:Button
+                        Grid.Row="0"
+                        Margin="0,0,0,16"
+                        HorizontalAlignment="Left"
+                        Appearance="Secondary"
+                        Command="{Binding DataContext.AddAbilityOptionDataCommand, RelativeSource={RelativeSource AncestorType=Page}}"
+                        Content="{i18n:StringLocalizer 'New Level'}"
+                        Icon="Add24" />
+
+                    <!--  Two Column Grid for Ability Data  -->
+                    <ItemsControl Grid.Row="1" ItemsSource="{Binding SelectedItem.AbilityOptionData, Mode=OneWay, ElementName=AccessoriesListView}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <UniformGrid Columns="2" />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                        <ItemsControl.ItemTemplate>
+                            <DataTemplate>
+                                <Border
+                                    Margin="0,0,6,12"
+                                    Padding="16"
+                                    BorderBrush="{DynamicResource ControlStrokeColorDefaultBrush}"
+                                    BorderThickness="1"
+                                    CornerRadius="6"
+                                    Tag="{Binding}">
                                     <Grid>
                                         <Grid.RowDefinitions>
                                             <RowDefinition Height="Auto" />
@@ -395,11 +395,11 @@
                                         </ui:Button>
                                     </Grid>
                                 </Border>
-                                        </DataTemplate>
-                                    </ItemsControl.ItemTemplate>
-                                </ItemsControl>
-                        </Grid>
-                </ScrollViewer>
+                            </DataTemplate>
+                        </ItemsControl.ItemTemplate>
+                    </ItemsControl>
+                </Grid>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </Page>
