--- a/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
+++ b/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
@@ -216,45 +216,39 @@
             </Grid.RowDefinitions>
 
             <!--  Add und Delete Buttons oben rechts  -->
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <StackPanel
-                    Grid.Column="1"
-                    Margin="0,10,0,0"
-                    Orientation="Horizontal">
-                    <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
-                        <ui:SymbolIcon Symbol="ArrowUndo24" />
-                    </ui:Button>
-                    <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
-                        <ui:SymbolIcon Symbol="ArrowRedo24" />
-                    </ui:Button>
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Command="{Binding SaveCommand}"
-                        Content="{i18n:StringLocalizer 'Save'}" />
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Appearance="Secondary"
-                        Content="{i18n:StringLocalizer 'Expert'}"
-                        Icon="Settings24" />
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Appearance="Primary"
-                        Command="{Binding AddGiftboxItemCommand}"
-                        Content="{i18n:StringLocalizer 'New Box'}"
-                        Icon="Add24" />
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Appearance="Danger"
-                        Command="{Binding DeleteGiftboxCommand}"
-                        Content="{i18n:StringLocalizer 'Delete Box'}"
-                        Icon="Delete24" />
-                </StackPanel>
-            </Grid>
+            <StackPanel
+                Grid.Row="0"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <ui:Button ToolTip="{i18n:StringLocalizer 'Undo'}">
+                    <ui:SymbolIcon Symbol="ArrowUndo24" />
+                </ui:Button>
+                <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
+                    <ui:SymbolIcon Symbol="ArrowRedo24" />
+                </ui:Button>
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Command="{Binding SaveCommand}"
+                    Content="{i18n:StringLocalizer 'Save'}" />
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Appearance="Secondary"
+                    Content="{i18n:StringLocalizer 'Expert'}"
+                    Icon="Settings24" />
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Appearance="Primary"
+                    Command="{Binding AddGiftboxItemCommand}"
+                    Content="{i18n:StringLocalizer 'New Box'}"
+                    Icon="Add24" />
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Appearance="Danger"
+                    Command="{Binding DeleteGiftboxCommand}"
+                    Content="{i18n:StringLocalizer 'Delete Box'}"
+                    Icon="Delete24" />
+            </StackPanel>
 
             <!--  Separator  -->
             <Separator
@@ -326,17 +320,8 @@
                         </Style.Triggers>
                     </Style>
                 </ui:Card.Style>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
-                        <RowDefinition Height="*" />
-                    </Grid.RowDefinitions>
-                    
-                    <!--  DataGrid Header  -->
-                    <Grid Grid.Row="0" Margin="0,0,0,15"/>
-
                 <DataGrid
-                Grid.Row="1"
+                    Grid.Row="1"
                     VerticalAlignment="Top"
                     VerticalContentAlignment="Center"
                     AutoGenerateColumns="False"
@@ -350,9 +335,7 @@
                     IsReadOnly="True"
                     ItemsSource="{Binding SelectedItem.Items, ElementName=GiftboxListView}">
                     <DataGrid.Columns>
-                        <DataGridTemplateColumn
-                            Width="*"
-                            SortMemberPath="Item.Name">
+                        <DataGridTemplateColumn Width="*" SortMemberPath="Item.Name">
                             <DataGridTemplateColumn.HeaderTemplate>
                                 <DataTemplate>
                                     <Grid>
@@ -362,18 +345,18 @@
                                         </Grid.ColumnDefinitions>
                                         <TextBlock
                                             Grid.Column="0"
-                                            Text="{i18n:StringLocalizer 'Item'}"
-                                            VerticalAlignment="Center" />
+                                            VerticalAlignment="Center"
+                                            Text="{i18n:StringLocalizer 'Item'}" />
                                         <ui:Button
                                             Grid.Column="1"
+                                            MinWidth="65"
+                                            Margin="10,0,0,0"
+                                            Padding="8,2"
                                             Background="#2F70AF"
                                             Command="{Binding DataContext.AddGiftboxItemCommand, RelativeSource={RelativeSource AncestorType=Page}}"
                                             Content="{i18n:StringLocalizer 'Add item'}"
                                             FontSize="10"
-                                            Icon="Add16"
-                                            Padding="8,2"
-                                            MinWidth="65"
-                                            Margin="10,0,0,0" />
+                                            Icon="Add16" />
                                     </Grid>
                                 </DataTemplate>
                             </DataGridTemplateColumn.HeaderTemplate>
@@ -452,8 +435,7 @@
                             </DataGridTemplateColumn.CellTemplate>
                         </DataGridTemplateColumn>
                     </DataGrid.Columns>
-                    </DataGrid>
-                </Grid>
+                </DataGrid>
             </ui:Card>
         </Grid>
     </Grid>
