--- a/eTools Ultimate/Views/Pages/TextsPage.xaml
+++ b/eTools Ultimate/Views/Pages/TextsPage.xaml
@@ -192,52 +192,45 @@
             </Grid.RowDefinitions>
 
             <!--  Add und Delete Buttons oben rechts  -->
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <StackPanel
-                    Grid.Column="1"
-                    Margin="0,10,0,0"
-                    Orientation="Horizontal">
-                    <ui:Button Margin="0,0,0,0" ToolTip="{i18n:StringLocalizer 'Undo'}">
-                        <ui:SymbolIcon Symbol="ArrowUndo24" />
-                    </ui:Button>
-                    <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
-                        <ui:SymbolIcon Symbol="ArrowRedo24" />
-                    </ui:Button>
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Command="{Binding SaveCommand}"
-                        Content="{i18n:StringLocalizer 'Save'}" />
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Appearance="Secondary"
-                        Content="{i18n:StringLocalizer 'Expert'}"
-                        Icon="Settings24" />
-                    <ui:Button
-                        Margin="0,0,10,0"
-                        Appearance="Primary"
-                        Command="{Binding AddTextCommand}"
-                        Content="{i18n:StringLocalizer 'Add'}"
-                        Icon="Add24" />
-                    <ui:Button
-                        Margin="0,0,0,0"
-                        Appearance="Danger"
-                        Command="{Binding DeleteTextCommand}"
-                        Content="{i18n:StringLocalizer 'Delete'}"
-                        Icon="Delete24" />
-                </StackPanel>
-            </Grid>
+            <StackPanel
+                Grid.Row="0"
+                Margin="0,10,0,0"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <ui:Button Margin="0,0,0,0" ToolTip="{i18n:StringLocalizer 'Undo'}">
+                    <ui:SymbolIcon Symbol="ArrowUndo24" />
+                </ui:Button>
+                <ui:Button Margin="10,0,10,0" ToolTip="{i18n:StringLocalizer 'Redo'}">
+                    <ui:SymbolIcon Symbol="ArrowRedo24" />
+                </ui:Button>
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Command="{Binding SaveCommand}"
+                    Content="{i18n:StringLocalizer 'Save'}" />
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Appearance="Secondary"
+                    Content="{i18n:StringLocalizer 'Expert'}"
+                    Icon="Settings24" />
+                <ui:Button
+                    Margin="0,0,10,0"
+                    Appearance="Primary"
+                    Command="{Binding AddTextCommand}"
+                    Content="{i18n:StringLocalizer 'Add'}"
+                    Icon="Add24" />
+                <ui:Button
+                    Margin="0,0,0,0"
+                    Appearance="Danger"
+                    Command="{Binding DeleteTextCommand}"
+                    Content="{i18n:StringLocalizer 'Delete'}"
+                    Icon="Delete24" />
+            </StackPanel>
 
             <!--  Separator  -->
             <Separator
                 Grid.Row="1"
-                Margin="0,10,0,10"
+                Margin="0,5,0,5"
                 Background="{DynamicResource ControlStrokeColorDefaultBrush}" />
-
 
             <!--  Form Section with General Fields  -->
             <ScrollViewer Grid.Row="2" VerticalScrollBarVisibility="Auto">
