--- a/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
+++ b/eTools Ultimate/Views/Pages/GiftboxesPage.xaml
@@ -131,7 +131,7 @@
                     Margin="10,10,10,10"
                     BorderThickness="0"
                     Icon="Search24"
-                    PlaceholderText="{i18n:StringLocalizer 'Search'}"
+                    PlaceholderText="{i18n:StringLocalizer 'Search...'}"
                     Text="{Binding SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
             </Border>
 
