--- a/eTools Ultimate/Views/Windows/DeletionLogWindow.xaml
+++ b/eTools Ultimate/Views/Windows/DeletionLogWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:local="clr-namespace:eTools_Ultimate.Views.Windows"
     mc:Ignorable="d"
-    Title="{i18n:StringLocalizer 'Deletion Log'}"
+    Title=""
     Height="600"
     Width="1200"
     WindowStartupLocation="CenterOwner"
@@ -55,7 +55,7 @@
 
         <DataGrid
             Grid.Row="1"
-            Margin="12"
+            Margin="0"
             AutoGenerateColumns="False"
             CanUserAddRows="False"
             CanUserDeleteRows="False"
@@ -133,7 +133,7 @@
             Grid.Row="2"
             Margin="12"
             Orientation="Horizontal"
-            HorizontalAlignment="Center">
+            HorizontalAlignment="Right">
             <ui:Button
                 Margin="0,0,8,0"
                 Command="{Binding RefreshCommand}"
